v157
(xx/09/17)

Changes / Improvements / Optimizations:
General | Ondemand is now the default CPU governor for all devices. Previously Interactive, which is not available in mainline Linux kernel. "Ondemand" has been set for all system in this patch, please revert to another CPU gov as needed.
General | Improved notifications for when DietPi is installing system with automated flags.
DietPi-Software | Allo Web Interface: Added for testing purposes only. We will provide release images for Sparky and RPi pre-installed at a later date.
DietPi-Software | Roon Bridge: Now available for x86_64 systems.
DietPi-Software | Stretch: TightVNC now disabled as replaced by TigerVNC/VNC4.
DietPi-Software | Minio: Now available for installation. Object storage server with Amazon S3 compatible API. Many thanks to @techdabbler for contributing this addition! https://github.com/Fourdee/DietPi/pull/1152
DietPi-Software | Sabnzbd: Updated to 2.3.0 for new installations only. Thanks @hydrouk

Bug fixes:
DietPi-Drive_Manager | Resolved an issue where "Read Only" drives would incorrectly be displayed as "Disabled".
DietPi-Services | PHP7-FPM service now correctly controlled.
DietPi-Software | Stretch: VNC4Server, resolved various issues with tigervnc that prevented successful installation and operation. Disabled "localhost" only by default. TigerVNC packages now removed correctly during uninstall.

Allo Web Interface Changes:
SYSTEM SETTINGS: When in STATIC IP mode, and changing IP addresses, "Save Settings" button is now shown correctly
SYSTEM SETTINGS: Improved Swapfile info window information (calculate swap size)
SYSTEM SETTINGS: Removed "Interactive" CPU gov from "System Settings" Page. This is due to lack of mainline support for "Interactive" (RPi), and, instability seen on ASUS TB. "Ondemand" now recommended and is DietPi default as of v157.
SYSTEM SETTINGS: DietPi Version number is now shown when no updates are available.