@@ -7021,7 +7021,7 @@ _EOF_
 		fi
 
 		#Allo Web Interface
-		INSTALLING_INDEX=159 #160 for quick reinstall
+		INSTALLING_INDEX=159 #160 for quick reinstall/update
 		if (( ${aSOFTWARE_INSTALL_STATE[$INSTALLING_INDEX]} == 1 ||
 			${aSOFTWARE_INSTALL_STATE[160]} == 1 )); then
 
@@ -11772,7 +11772,7 @@ _EOF_
 		fi
 
 		#Allo Config
-		INSTALLING_INDEX=159 #160 for quick reinstall
+		INSTALLING_INDEX=159 #160 for quick reinstall/update
 		if (( ${aSOFTWARE_INSTALL_STATE[$INSTALLING_INDEX]} == 1 ||
 			${aSOFTWARE_INSTALL_STATE[160]} == 1 )); then
 
