@@ -1129,6 +1129,8 @@ _EOF_
 
 		aBLUETOOTH_MODULES+=("hci_uart")
 
+		rm /etc/modprobe.d/disable_bt.conf &> /dev/null
+
 		# - Disable
 		if [ "$INPUT_DEVICE_VALUE" = "disable" ]; then
 
@@ -1169,8 +1171,6 @@ _EOF_
 
 		# - Enable
 		elif [ "$INPUT_DEVICE_VALUE" = "enable" ]; then
-
-			rm /etc/modprobe.d/disable_bt.conf &> /dev/null
 
 			#bluetooth first
 			for ((i=0; i<${#aBLUETOOTH_MODULES[@]}; i++))
@@ -1385,7 +1385,7 @@ After=network.target network-online.target
 [Service]
 Type=simple
 RemainAfterExit=yes
-ExecStart=/bin/bash -c 'sleep 20;iwconfig wlan$(sed -n 2p /DietPi/dietpi/.network) power off
+ExecStart=/bin/bash -c 'sleep 20;iwconfig wlan$(sed -n 2p /DietPi/dietpi/.network) power off'
 
 [Install]
 WantedBy=multi-user.target
