@@ -2677,24 +2677,6 @@ _EOF_
 		#Deb multimedia repo remove for ALL installs: https://github.com/Fourdee/DietPi/issues/1096#issuecomment-318076721
 		rm /etc/apt/sources.list.d/deb-multimedia.list &> /dev/null
 		#-------------------------------------------------------------------------------
-		#RPi update DietPi kernel:
-		if (( $HW_MODEL < 10 )); then
-
-			# - remove old flags
-			rm /etc/dietpi/.dietpi_rpi &> /dev/null
-			rm /etc/dietpi/.384khz_rpi &> /dev/null
-
-			/DietPi/dietpi/func/dietpi-set_hardware kernel dietpi_rpi
-
-			# Sabre module update
-			if (( $(cat /DietPi/config.txt | grep -ci -m1 'dtoverlay=i-sabre-k2m') )); then
-
-				whiptail --title "i-sabre-k2m" --msgbox "Due to a kernel update, this driver must be reinstalled, however, this can only be completed after the system is rebooted.\n\nOnce the system reboots:\n - use DietPi-Config to select soundcard 'none'\n - then reselect 'i-sabre-k2m'\n - Reboot system" 14 70
-
-			fi
-
-		fi
-		#-------------------------------------------------------------------------------
 		#FS forced resize option (dev use)
 		if (( ! $(cat /DietPi/dietpi.txt | grep -ci -m1 '^fs_force_resize=') )); then
 
@@ -2758,16 +2740,39 @@ _EOF_
 		sed -i "/cpu_governor=/c\cpu_governor=ondemand" /DietPi/dietpi.txt
 		#-------------------------------------------------------------------------------
 		#Reinstalls
-		#	Allo Web interface (quick reinstall)
+		#	Allo Web interface (quick update)
 		if (( $(cat /DietPi/dietpi/.installed | grep -ci -m1 '^aSOFTWARE_INSTALL_STATE\[159\]=2') )); then
 
+			# - Add quick reinstall entry if does not exist
 			if (( ! $(cat /DietPi/dietpi/.installed | grep -ci -m1 '^aSOFTWARE_INSTALL_STATE\[160\]=2') )); then
 
 				echo -e "aSOFTWARE_INSTALL_STATE[160]=2" >> /DietPi/dietpi/.installed
 
 			fi
 
+			# - Quick update
 			/DietPi/dietpi/dietpi-software reinstall 160
+
+			# - Full update (including pre-req reinstalls
+			#/DietPi/dietpi/dietpi-software reinstall 159
+
+		fi
+		#-------------------------------------------------------------------------------
+		#RPi update DietPi kernel:
+		if (( $HW_MODEL < 10 )); then
+
+			# - remove old flags
+			rm /etc/dietpi/.dietpi_rpi &> /dev/null
+			rm /etc/dietpi/.384khz_rpi &> /dev/null
+
+			/DietPi/dietpi/func/dietpi-set_hardware kernel dietpi_rpi
+
+			# Sabre module update
+			if (( $(cat /DietPi/config.txt | grep -ci -m1 'dtoverlay=i-sabre-k2m') )); then
+
+				whiptail --title "i-sabre-k2m" --msgbox "Due to a kernel update, this driver must be reinstalled, however, this can only be completed after the system is rebooted.\n\nOnce the system reboots:\n - use DietPi-Config to select soundcard 'none'\n - then reselect 'i-sabre-k2m'\n - Reboot system" 14 70
+
+			fi
 
 		fi
 		#-------------------------------------------------------------------------------
