@@ -4,6 +4,8 @@ v157
 Changes / Improvements / Optimizations:
 General | Ondemand is now the default CPU governor for all devices. Previously Interactive, which is not available in mainline Linux kernel. "Ondemand" has been set for all system in this patch, please revert to another CPU gov as needed.
 General | Improved notifications for when DietPi is installing system with automated flags.
+General | DietPi RPi Kernel: Updated to 4.9.52
+General | RPi Stretch: Updated, matching official release of 2017-09-07-raspbian-stretch-lite
 DietPi-Software | Allo Web Interface: Added for testing purposes only. We will provide release images for Sparky and RPi pre-installed at a later date.
 DietPi-Software | Roon Bridge: Now available for x86_64 systems.
 DietPi-Software | Stretch: TightVNC now disabled as replaced by TigerVNC/VNC4.
@@ -11,6 +13,7 @@ DietPi-Software | Minio: Now available for installation. Object storage server w
 DietPi-Software | Sabnzbd: Updated to 2.3.0 for new installations only. Thanks @hydrouk
 
 Bug fixes:
+DietPi-Config | Resolved syntax issues with wifi_disable_powersave.service
 DietPi-Drive_Manager | Resolved an issue where "Read Only" drives would incorrectly be displayed as "Disabled".
 DietPi-Services | PHP7-FPM service now correctly controlled.
 DietPi-Software | Stretch: VNC4Server, resolved various issues with tigervnc that prevented successful installation and operation. Disabled "localhost" only by default. TigerVNC packages now removed correctly during uninstall.
@@ -26,7 +29,7 @@ MAIN PAGE: Fixed WiFi HotSpot errors when not installed, edit button now disable
 DIETPI-UPDATE: There was an issue with the PHP SSH library used, default timeout was 20 seconds. This would prevent "dietpi-update" from completing successfully. Due to this, all previous "Release Candidate" images, cannot be updated successfully. The latest image is required, with timeout disabled.
 ROON SETTINGS: Disabling Roon Service, will now keep disabled, during reboots.
 SHAIRPORT-SYNC: Ive added ability to change output frequency and bit depth
-
+SYSTEM SETTINGS: Reduced DietPi-Update duration for web interface upgrades.
 SYSTEM SETTINGS: Resolved issue with rebooting the system, resulting in an endless hang on GUI.
 
 -----------------------------------------------------------------------------------------------------------
